Add link to metapackage to each component's README Update package names in each component's package.json

--- a/CartoDBTileLayer/package.json
+++ b/CartoDBTileLayer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CartoDBTileLayer",
+  "name": "@stamen/cartodb-tilelayer",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
