--- a/DiscreteBarChart/package.json
+++ b/DiscreteBarChart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DiscreteBarChart",
+  "name": "@stamen/discretebarchart",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
