--- a/HashManager/package.json
+++ b/HashManager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HashManager",
+  "name": "@stamen/hashmanager",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
