--- a/OffsetAreaChart/package.json
+++ b/OffsetAreaChart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AreaChart",
+  "name": "@stamen/offsetareachart",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
