--- a/CartoDBLoader/package.json
+++ b/CartoDBLoader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CartoDBLoader",
+  "name": "@stamen/cartodb-loader",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
