--- a/ChartSlider/package.json
+++ b/ChartSlider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChartSlider",
+  "name": "@stamen/chartslider",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
