--- a/IntroManager/package.json
+++ b/IntroManager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IntroManager",
+  "name": "@stamen/intromanager",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
