--- a/ItemSelector/package.json
+++ b/ItemSelector/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ItemSelector",
+  "name": "@stamen/itemselector",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
