--- a/LeafletChoropleth/package.json
+++ b/LeafletChoropleth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LeafletChoropleth",
+  "name": "@stamen/leaflet-choropleth",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
