--- a/LeafletDonut/package.json
+++ b/LeafletDonut/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LeafletDonut",
+  "name": "@stamen/leaflet-donut",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
