--- a/LeafletTooltip/package.json
+++ b/LeafletTooltip/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LeafletTooltip",
+  "name": "@stamen/leaflet-tooltip",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
