--- a/MapChoropleth/package.json
+++ b/MapChoropleth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MapChoropleth",
+  "name": "@stamen/choropleth",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
