--- a/ScatterPlot/package.json
+++ b/ScatterPlot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ScatterPlot",
+  "name": "@stamen/scatterplot",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
