--- a/TimeBasedMarkers/package.json
+++ b/TimeBasedMarkers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TimeBasedMarkers",
+  "name": "@stamen/timebasedmarkers",
   "main": "./es5/index.js",
   "version": "0.0.1",
   "repository": {
