Update package.json to new package names Fix lodash imports

--- a/package.json
+++ b/package.json
@@ -75,26 +75,26 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "AreaChart": "file:AreaChart",
-    "CartoDBLoader": "file:CartoDBLoader",
-    "CartoDBTileLayer": "file:CartoDBTileLayer",
-    "ChartSlider": "file:ChartSlider",
-    "DiscreteBarChart": "file:DiscreteBarChart",
-    "HashManager": "file:HashManager",
-    "HorizontalDiscreteBarChart": "file:HorizontalDiscreteBarChart",
-    "IntroManager": "file:IntroManager",
-    "ItemSelector": "file:ItemSelector",
-    "LeafletChoropleth": "file:LeafletChoropleth",
-    "LeafletDonut": "file:LeafletDonut",
-    "LeafletTooltip": "file:LeafletTooltip",
-    "Legend": "file:Legend",
-    "LineChart": "file:LineChart",
-    "MapChoropleth": "file:MapChoropleth",
-    "Navigation": "file:Navigation",
-    "OffsetAreaChart": "file:OffsetAreaChart",
-    "Punchcard": "file:Punchcard",
-    "ScatterPlot": "file:ScatterPlot",
-    "TextList": "file:TextList",
-    "TimeBasedMarkers": "file:TimeBasedMarkers"
+    "@stamen/areachart": "file:AreaChart",
+    "@stamen/cartodb-loader": "file:CartoDBLoader",
+    "@stamen/cartodb-tilelayer": "file:CartoDBTileLayer",
+    "@stamen/chartslider": "file:ChartSlider",
+    "@stamen/choropleth": "file:MapChoropleth",
+    "@stamen/discretebarchart": "file:DiscreteBarChart",
+    "@stamen/hashmanager": "file:HashManager",
+    "@stamen/horizontaldiscretebarchart": "file:HorizontalDiscreteBarChart",
+    "@stamen/intromanager": "file:IntroManager",
+    "@stamen/itemselector": "file:ItemSelector",
+    "@stamen/leaflet-choropleth": "file:LeafletChoropleth",
+    "@stamen/leaflet-donut": "file:LeafletDonut",
+    "@stamen/leaflet-tooltip": "file:LeafletTooltip",
+    "@stamen/legend": "file:Legend",
+    "@stamen/linechart": "file:LineChart",
+    "@stamen/navigation": "file:Navigation",
+    "@stamen/offsetareachart": "file:OffsetAreaChart",
+    "@stamen/punchcard": "file:Punchcard",
+    "@stamen/scatterplot": "file:ScatterPlot",
+    "@stamen/textlist": "file:TextList",
+    "@stamen/timebasedmarkers": "file:TimeBasedMarkers"
   }
 }
