--- a/LeafletChoropleth/package.json
+++ b/LeafletChoropleth/package.json
@@ -12,8 +12,8 @@
     "leaflet": "^0.7.7",
     "react-leaflet": "^0.10.2",
     "lodash.assign": "^4.0.0",
-    "lodash.isArray": "^4.0.0",
-    "lodash.isObject": "^3.0.0",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isobject": "^3.0.0",
     "lodash.pick": "^4.0.0"
   }
 }
