Lowercase+hyphenate all folder names to match npm package names; leave JS imports as camelCase as per JS convention.

--- a/package.json
+++ b/package.json
@@ -75,26 +75,26 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "@stamen/areachart": "file:AreaChart",
-    "@stamen/cartodb-loader": "file:CartoDBLoader",
-    "@stamen/cartodb-tilelayer": "file:CartoDBTileLayer",
-    "@stamen/chartslider": "file:ChartSlider",
-    "@stamen/choropleth": "file:Choropleth",
-    "@stamen/discretebarchart": "file:DiscreteBarChart",
-    "@stamen/hashmanager": "file:HashManager",
-    "@stamen/horizontaldiscretebarchart": "file:HorizontalDiscreteBarChart",
-    "@stamen/intromanager": "file:IntroManager",
-    "@stamen/itemselector": "file:ItemSelector",
-    "@stamen/leaflet-choropleth": "file:LeafletChoropleth",
-    "@stamen/leaflet-donut": "file:LeafletDonut",
-    "@stamen/leaflet-tooltip": "file:LeafletTooltip",
-    "@stamen/legend": "file:Legend",
-    "@stamen/linechart": "file:LineChart",
-    "@stamen/navigation": "file:Navigation",
-    "@stamen/offsetareachart": "file:OffsetAreaChart",
-    "@stamen/punchcard": "file:Punchcard",
-    "@stamen/scatterplot": "file:ScatterPlot",
-    "@stamen/textlist": "file:TextList",
-    "@stamen/timebasedmarkers": "file:TimeBasedMarkers"
+    "@stamen/areachart": "file:areachart",
+    "@stamen/cartodb-loader": "file:cartodb-loader",
+    "@stamen/cartodb-tilelayer": "file:cartodb-tilelayer",
+    "@stamen/chartslider": "file:chartslider",
+    "@stamen/choropleth": "file:choropleth",
+    "@stamen/discretebarchart": "file:discretebarchart",
+    "@stamen/hashmanager": "file:hashmanager",
+    "@stamen/horizontaldiscretebarchart": "file:horizontaldiscretebarchart",
+    "@stamen/intromanager": "file:intromanager",
+    "@stamen/itemselector": "file:itemselector",
+    "@stamen/leaflet-choropleth": "file:leaflet-choropleth",
+    "@stamen/leaflet-donut": "file:leaflet-donut",
+    "@stamen/leaflet-tooltip": "file:leaflet-tooltip",
+    "@stamen/legend": "file:legend",
+    "@stamen/linechart": "file:linechart",
+    "@stamen/navigation": "file:navigation",
+    "@stamen/offsetareachart": "file:offsetareachart",
+    "@stamen/punchcard": "file:punchcard",
+    "@stamen/scatterplot": "file:scatterplot",
+    "@stamen/textlist": "file:textlist",
+    "@stamen/timebasedmarkers": "file:timebasedmarkers"
   }
 }
