--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run dev-examples",
     "test": "jest",
     "lint": "eslint ./src",
-    "postinstall": "npm run build-modules",
+    "preinstall": "npm run build-modules",
     "build-modules": "gulp build",
     "dev-modules": "gulp dev",
     "publish-module": "./_build-config/publish-module.sh",
