--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stamen/panorama",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "description": "Panorama visualization toolkit",
   "main": "index.js",
   "scripts": {
@@ -77,26 +77,26 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "@stamen/areachart": "file:areachart",
-    "@stamen/cartodb-loader": "file:cartodb-loader",
-    "@stamen/cartodb-tilelayer": "file:cartodb-tilelayer",
-    "@stamen/chartslider": "file:chartslider",
-    "@stamen/choropleth": "file:choropleth",
-    "@stamen/discretebarchart": "file:discretebarchart",
-    "@stamen/hashmanager": "file:hashmanager",
-    "@stamen/horizontaldiscretebarchart": "file:horizontaldiscretebarchart",
-    "@stamen/intromanager": "file:intromanager",
-    "@stamen/itemselector": "file:itemselector",
-    "@stamen/leaflet-choropleth": "file:leaflet-choropleth",
-    "@stamen/leaflet-donut": "file:leaflet-donut",
-    "@stamen/leaflet-tooltip": "file:leaflet-tooltip",
-    "@stamen/legend": "file:legend",
-    "@stamen/linechart": "file:linechart",
-    "@stamen/navigation": "file:navigation",
-    "@stamen/offsetareachart": "file:offsetareachart",
-    "@stamen/punchcard": "file:punchcard",
-    "@stamen/scatterplot": "file:scatterplot",
-    "@stamen/textlist": "file:textlist",
-    "@stamen/timebasedmarkers": "file:timebasedmarkers"
+    "@stamen/areachart": "^0.1.0",
+    "@stamen/cartodb-loader": "^0.1.0",
+    "@stamen/cartodb-tilelayer": "^0.1.0",
+    "@stamen/chartslider": "^0.1.0",
+    "@stamen/choropleth": "^0.1.0",
+    "@stamen/discretebarchart": "^0.1.0",
+    "@stamen/hashmanager": "^0.1.0",
+    "@stamen/horizontaldiscretebarchart": "^0.1.0",
+    "@stamen/intromanager": "^0.1.0",
+    "@stamen/itemselector": "^0.1.0",
+    "@stamen/leaflet-choropleth": "^0.1.0",
+    "@stamen/leaflet-donut": "^0.1.0",
+    "@stamen/leaflet-tooltip": "^0.1.0",
+    "@stamen/legend": "^0.1.0",
+    "@stamen/linechart": "^0.1.0",
+    "@stamen/navigation": "^0.1.0",
+    "@stamen/offsetareachart": "^0.1.0",
+    "@stamen/punchcard": "^0.1.0",
+    "@stamen/scatterplot": "^0.1.0",
+    "@stamen/textlist": "^0.1.0",
+    "@stamen/timebasedmarkers": "^0.1.0"
   }
 }
