--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@stamen/panorama",
   "version": "0.2.2",
   "description": "Panorama visualization toolkit",
-  "main": "index.js",
+  "main": "index-es5.js",
   "scripts": {
     "start": "npm run dev-examples",
     "test": "jest",
